# NeonFameReverberation

./: .gitignore  CLAUDE.md  CMakeLists.txt  status.json
.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md  v2-test.html
Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/ui/public/: index.html
Source/ui/public/js/: index.js
